--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~54.0.0",
-    "expo-status-bar": "~2.3.1",
-    "react": "18.2.0",
-    "react-native": "0.73.8"
+  "expo": "~54.0.0",
+  "expo-status-bar": "~3.0.8",
+  "react": "19.1.0",
+  "react-native": "0.81.4",
+  "react-dom": "19.1.0",
+  "react-native-web": "^0.21.0",
+  "@expo/metro-runtime": "~6.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
-  },
-  "private": true
+  }
 }
